# codebase-rag

./: .bumpversion.toml  .dockerignore  .gitignore  CLAUDE.md  CONFIGURATION_GUIDE.md  DOCKER.md  DOCKER_IMPLEMENTATION_SUMMARY.md  DOCKER_OPTIMIZATION.md  Dockerfile  Dockerfile.v02  FRONTEND_BUILD.md  GITHUB_PAGES_TROUBLESHOOTING.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_v02.md  MCP_ARCHITECTURE.md  MCP_REGISTRY_SUBMISSION_SUMMARY.md  MCP_SSE_GUIDE.md  Makefile  QUICKSTART_v02.md  README.md  README_CN.md  README_Neo4j.md  README_v02.md  STRUCTURE_v02.txt  SUMMARY.md  UPGRADE_TWO_PORT.md  VERSION_MANAGEMENT_SUMMARY.md  alembic.ini  config.py  config.py.backup  docker-compose.v02.yml  docker-compose.yml  env.example  main.py  mcp_config.json  mcp_server.py  mcp_server_v2.py  mkdocs.yml  pyproject.toml  pytest.ini  (+7 more)
.backup/: start_mcp_v1.py.bak
.github/: CONTRIBUTING.md
.github/workflows/: README.md  ci.yml  docker-build.yml  docs-deploy.yml  pr-tests.yml
.serena/: project.yml
alembic/: README  env.py
alembic/versions/: 20241025_01_create_auth_tables.py  20241025_02_create_audit_events.py  20241025_03_create_knowledge_sources_tables.py  20241030_01_add_event_metadata_column.py  20251030_02_create_knowledge_user_workbench_tables.py  20251030_03_fix_knowledge_sources_metadata_column.py  295bf7fdb1f4_add_company_department_to_users.py
api/: admin_routes.py  auth.py  dashboard.py  knowledge_notes.py  knowledge_routes.py  memory_routes.py  neo4j_routes.py  routes.py  task_routes.py  websocket_routes.py
backend/: __init__.py
backend/app/: config.py  dependencies.py  main.py
backend/app/models/: context_models.py  graph_models.py  ingest_models.py
backend/app/routers/: context.py  graph.py  ingest.py
config/: sky.yml
core/: __init__.py  app.py  exception_handlers.py  lifespan.py  logging.py  middleware.py  routes.py
database/: __init__.py  base.py  init_db.py  session.py  types.py
database/models/: __init__.py  audit.py  casbin.py  knowledge.py  knowledge_user.py  task.py  user.py
docker/: Dockerfile.base  Dockerfile.full  Dockerfile.minimal  Dockerfile.standard  docker-compose.full.yml  docker-compose.minimal.yml  docker-compose.standard.yml
docker/.env.template/: .env.full  .env.minimal  .env.standard
docs/: CNAME  IMPLEMENTATION_SUMMARY.md  MCP_MIGRATION_GUIDE.md  MCP_V2_MODULARIZATION.md  changelog.md  code_repository_management_mvp.md  faq.md  graph_query_requirements.md  index.md  openapi.json  setup.md  troubleshooting.md
docs/api/: mcp-tools.md  python-sdk.md  rest.md
docs/architecture/: components.md  dataflow.md  design.md  overview.md
docs/deployment/: cloudflare-setup.md  docker.md  full.md  minimal.md  overview.md  production.md  standard.md
docs/development/: changelog-automation.md  contributing.md  migration-guide.md  release.md  setup.md  testing.md  version-management.md
docs/development/testing/: frontend.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/guide/: frontend.md
docs/guide/code-graph/: context.md  impact.md  ingestion.md  overview.md  search.md
docs/guide/knowledge/: documents.md  overview.md  query.md
docs/guide/mcp/: claude-desktop.md  overview.md  vscode.md
docs/guide/memory/: extraction.md  manual.md  overview.md  search.md
examples/: api_client_v02.py  hybrid_http_sse_client.py  memory_usage_example.py  pure_mcp_client.py
frontend/: .gitignore  TEST.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts  vitest.config.ts
frontend/src/: main.tsx  routeTree.gen.ts
frontend/src/lib/: api.test.ts  api.ts  utils.test.ts  utils.ts
frontend/src/routes/: __root.tsx  index.tsx  metrics.tsx  repositories.tsx  tasks.tsx
mcp-registry-submission/: README.md  SUBMISSION_GUIDE.md
mcp-registry-submission/codebase-rag-full/: server.yaml  tools.json
mcp-registry-submission/codebase-rag-minimal/: server.yaml  tools.json
mcp-registry-submission/codebase-rag-standard/: server.yaml  tools.json
mcp_tools/: README.md  __init__.py  memory_handlers.py  tool_definitions.py  utils.py
monitoring/: task_monitor.py
prompts/: system_graph_rag.txt  user_graph_rag.txt
schemas/: __init__.py  knowledge.py
scripts/: README.md  build-frontend.sh  bump-version.sh  debug_stream_query.py  demo_curl.sh  docker-deploy.sh  docker-start.sh  docker-stop.sh  export_openapi.py  generate-changelog.py  init_db.py  neo4j_bootstrap.sh  seed_demo_data.py  sync_code_to_knowledge.py
security/: __init__.py  auth.py  casbin_enforcer.py  casbin_model.conf  constants.py  dependencies.py  initialization.py  manager.py  schemas.py
services/: __init__.py  audit_logger.py  dashboard_service.py  embedding_client.py  embedding_utils.py  git_utils.py  graph_context_builder.py  graph_query_cache.py  graph_rag_service.py  graph_service.py  knowledge_note_service.py  knowledge_service.py  memory_extractor.py  memory_store.py  metrics.py  neo4j_knowledge_service.py  pack_builder.py  rag_service.py  ranker.py  rbac_service.py  source_service.py  sql_parser.py  sql_schema_parser.py  task_processors.py  task_queue.py  task_storage.py  universal_sql_schema_parser.py  vector_service.py
services/code_indexing/: __init__.py  code_parser.py  embedding.py  file_scanner.py  git_sync.py  graph_builder.py  pipeline.py
services/graph/: schema.cypher
services/pipeline/: base.py  embeddings.py  loaders.py  pipeline.py  storers.py  transformers.py
src/codebase_rag/: __init__.py  __main__.py  __version__.py
src/codebase_rag/api/: agent_routes.py  memory_routes.py  neo4j_routes.py  routes.py  sse_routes.py  task_routes.py  websocket_routes.py
src/codebase_rag/config/: __init__.py  settings.py  validation.py
src/codebase_rag/core/: app.py  routes.py  (+5 more)
static/: index.html
tests/: MCP_TEST_SUMMARY.md  README.md  __init__.py  conftest.py  test_context_pack.py  test_ingest.py  test_mcp_handlers.py  test_mcp_integration.py  test_mcp_utils.py  test_memory_store.py  test_related.py
tests/services/: test_pipeline_components.py
(+59 files in other folders)
