[project]
name = "code-graph"
version = "1.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",
    "sqlglot",
    "pymilvus",
    "neo4j",
    "llama-index",
    "llama-index-embeddings-huggingface",
    "llama-index-llms-ollama",
    "llama-index-vector-stores-milvus",
    "llama-index-graph-stores-neo4j",
    "httpx",
    "aiofiles",
    "python-jose[cryptography]",
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
    "loguru",
    "pytest",
    "pytest-asyncio",
    "black",
    "isort",
    "llama-index-vector-stores-neo4jvector>=0.3.0",
    "llama-index-embeddings-ollama>=0.6.0",
    "fastmcp>=2.7.1",
    "llama-index-llms-gemini>=0.5.0",
    "llama-index-embeddings-gemini>=0.3.2",
    "google-generativeai>=0.3.0",
    "matplotlib>=3.10.3",
    "nicegui>=2.19.0",
    "llama-index-llms-openrouter>=0.3.2",
    "sqlalchemy[asyncio]>=2.0.44",
    "alembic>=1.17.0",
    "asyncpg>=0.30.0",
    "psycopg[binary]>=3.2.11",
    "fastapi-users[sqlalchemy]>=14.0.1",
    "passlib[bcrypt]>=1.7.4",
    "pycasbin>=2.4.0",
    "casbin-sqlalchemy-adapter>=1.4.0",
    "pytest-cov>=7.0.0",
    "ghapi",
    "python-gitlab",
    "ollama>=0.6.0",
    "llama-index-embeddings-google-genai>=0.3.1",
]

[project.scripts]
server = "start:main"
mcp_client = "start_mcp:main"

[tool.setuptools]
packages = ["api", "core", "database", "services", "monitoring"]
py-modules = ["start", "start_mcp", "mcp_server", "config", "main"]
