[project]
name = "code-graph"
version = "0.7.0"
description = "AI-powered code intelligence and knowledge management system with graph database"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",
    "sqlglot",
    "pymilvus",
    "neo4j",
    "llama-index",
    "llama-index-embeddings-huggingface",
    "llama-index-llms-ollama",
    "llama-index-vector-stores-milvus",
    "llama-index-graph-stores-neo4j",
    "httpx",
    "aiofiles",
    "python-jose[cryptography]",
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
    "loguru",
    "llama-index-vector-stores-neo4jvector>=0.3.0",
    "llama-index-embeddings-ollama>=0.6.0",
    "mcp>=1.1.0",
    "llama-index-llms-gemini>=0.5.0",
    "llama-index-embeddings-gemini>=0.3.2",
    "google-generativeai>=0.3.0",
    "matplotlib>=3.10.3",
    "nicegui>=2.19.0",
    "llama-index-llms-openrouter>=0.3.2",
    "prometheus-client>=0.21.0",
]

[project.optional-dependencies]
dev = [
    "bump-my-version>=0.26.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "ruff>=0.6.0",
]

[project.scripts]
server = "start:main"
mcp_client = "start_mcp:main"

[tool.setuptools]
packages = ["api", "core", "services", "monitoring", "mcp_tools"]
py-modules = ["start", "start_mcp", "mcp_server", "config", "main"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: mark test as a unit test (no external dependencies)",
    "integration: mark test as an integration test (requires Neo4j, etc.)",
    "slow: mark test as slow running",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
source = ["mcp_tools", "services", "api", "core"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.black]
line-length = 100
target-version = ['py311', 'py312', 'py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
]
